--- a/package.json
+++ b/package.json
@@ -49,9 +49,10 @@
     "@babel/cli": "^7.24.1",
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-typescript": "^7.24.1",
+    "@cloudflare/workers-types": "^4.20240423.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@cloudflare/workers-types": "^4.20240423.0",
+    "tslib": "^2.6.2",
     "wrangler": "^3.52.0"
   }
 }
