--- a/.github/workflows/wrangler-worker.yml
+++ b/.github/workflows/wrangler-worker.yml
@@ -12,6 +12,15 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@v4
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - uses: pnpm/action-setup@v3
+        name: Install pnpm
+        with:
+          version: 8
+          run_install: false
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
