--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,7 @@
 name = "freedome"
-main = "./src/index.ts"
-
+main = "./src/worker-r2/index.ts"
 compatibility_date = "2022-06-30"
-
-account_id = "" # Replace with your Account ID.
 workers_dev = true
-
 [[r2_buckets]]
 binding = 'FREEDOME_BUCKET'
 bucket_name = 'freedome'
